app/assets/stylesheets/showcase.scss
.full-height {
  // 90 is intentional as it shows a portion of the next "slide" underneath
  // the main title
  min-height: 90vh;
}

.header-bottom {
  padding-top: 60vh;
}

.align-right {
  text-align: right;
}

// This adds margins to the bottom of col-md-* elements
.added-margin-bottom {
  margin-bottom: 20px;
}

.header-middle-lead {
  text-align: center;
  padding-top: 25vh;
}

.header-middle {
  padding-top: 5vh;
  text-align: center;
}

.inset-border {
  border: 1px solid #DADBDB;
  box-shadow: 0px 0px 3px 3px #AAA;
}

.inset-header-text {
  background-color: #333;
  color: transparent;
  text-shadow: 0px 2px 3px rgba(255,255,255,0.5);
  -webkit-background-clip: text;
  -moz-background-clip: text;
  background-clip: text;
  font-weight:bold !important;
}

